<resources>
    <string name="app_name">Rubi Delivery App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Intro slider labels -->
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="continue_">Continue</string>
    <string name="slide1_msg">Welcome</string>
    <string name="slide2_msg_part1">Your package delivery</string>
    <string name="slide2_msg_part2">made simple</string>
    <string name="slide3_msg_part1">Order your favourite</string>
    <string name="slide3_msg_part2">food</string>
    <string name="slide4_msg_part1">Track your order</string>
    <string name="slide4_msg_part2">all the way</string>
    <string-array name="intro_slider_titles">
        <item>@string/slide1_msg</item>
        <item>@string/slide2_msg_part1</item>
        <item>@string/slide3_msg_part1</item>
        <item>@string/slide4_msg_part1</item>
    </string-array>
    <string-array name="intro_slider_subtitles">
        <item>None</item>
        <item>@string/slide2_msg_part2</item>
        <item>@string/slide3_msg_part2</item>
        <item>@string/slide4_msg_part2</item>
    </string-array>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_order_history">Order History</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_terms_conditions">Terms and Conditions</string>
    <string name="nav_log_out">Log Out</string>
    <string name="nav_login">Login</string>
    <string name="nav_submit">Submit</string>
    <string name="nav_others">Others</string>
    <string name="nav_delete_account">Delete Account</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>@string/nav_home</item>
        <item>@string/nav_profile</item>
        <item>@string/nav_notifications</item>
        <item>@string/nav_order_history</item>
    </string-array>

    <!-- Titles for separate activities -->
    <string name="activity_title_browser">Browse | Rubi</string>
    <string name="activity_title_order">Meals</string>
    <string name="activity_title_image_chooser">Select Picture</string>
    <string name="activity_title_search">Search</string>

    <!-- Titles for toolbar menu -->
    <string name="action_clear_all">Clear All</string>
    <string name="action_proceed_order">Edit</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="terms_conditions">@string/nav_terms_conditions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Image view descriptions -->
    <string name="logo_description">This is the app logo</string>
    <string name="profile_image_description">This is the profile image</string>
    <string name="close_menu_description">This closes the sliding menu</string>
    <string name="search_button_description">This is the search button</string>
    <string name="mic_description">This is the speech to text button for searching</string>
    <string name="edit_order_description">This redirects to option to edit order(s)</string>
    <string name="landing_card_image_description">Image on landing page card view</string>
    <string name="search_card_image_description">Image on search page card view</string>
    <string name="today_s_offer_image_description">Image of today\'s offers</string>
    <string name="overflow_description">Contains overflow menu for landing page</string>
    <string name="city_description">Image of Nairobi city</string>
    <string name="add_btn_description">This button increases the amount</string>
    <string name="minus_btn_description">This button decreases the amount</string>
    <string name="redirect_home_description">This button redirects to home page</string>
    <string name="edit_profile_description">This button edit the profile</string>
    <string name="edit_profile_image_description">This button edit the profile image</string>
    <string name="order_appbar_image_description">Image of category</string>
    <string name="username_image_description">This is the username input section</string>
    <string name="email_address_image_description">This is the email input section</string>
    <string name="password_image_description">This is the password input section</string>
    <string name="location_image_description">This is the location input section</string>
    <string name="facebook_description">This is the Facebook&#174; button</string>
    <string name="google_plus_description">This is the Google+ &#174; button</string>
    <string name="welcome_image_description">This is an image in the intro slider to the app</string>
    <string name="welcome_indicator_description">This is an indicator for intro slider pages</string>
    <string name="web_view_back_description">This is the web view back button</string>
    <string name="web_view_forward_description">This is the web view forward button</string>
    <string name="web_view_bookmark_description">This is the web view bookmark button</string>

    <!-- Hints for edit text(s) -->
    <string name="hint_search">What would you like to eat?</string>
    <string name="hint_edit_meal_amount">1</string>
    <string name="hint_advert">Powered by Venturi Systems</string>

    <!-- Placeholders -->
    <string name="edit_profile_placeholder">Edit Profile</string>
    <string name="first_name_placeholder">First Name</string>
    <string name="last_name_placeholder">Last Name</string>
    <string name="password_placeholder">Password</string>
    <string name="email_address_placeholder">Email Address</string>
    <string name="name_placeholder">Your Name</string>
    <string name="location_placeholder">Your Location</string>
    <string name="details_placeholder">About You</string>
    <string name="phone_placeholder">Your Phone Number</string>
    <string name="email_placeholder">Your Email</string>
    <string name="landing_page_card_text_placeholder">Food</string>
    <string name="today_s_offers">Today\'s Offers</string>
    <string name="action_select_favourites">Favourites</string>
    <string name="action_select_categories">Categories</string>
    <string name="err_msg_search">Please enter search query</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_time">Time</string>
    <string name="notification_details">These are the details of the notification</string>
    <string name="cart_placeholder">My Cart</string>
    <string name="item_number">Number of items</string>
    <string name="total_price">Total:Ksh Amount</string>
    <string name="cart_order_name">Order Name</string>
    <string name="cart_order_details">Order Details</string>
    <string name="cart_order_price">Order Price</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="item">item</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="proceed_to_cart">Proceed to cart</string>
    <string name="cart">Cart</string>
    <string name="kenyan_currency">Ksh</string>
    <string name="nothing_placeholder">Nothing to show</string>
    <string name="order_history">View order history</string>
    <string name="category_placeholder">Name of category</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy">Buy</string>
    <string name="food_name">Food Name</string>
    <string name="food_price">Food Price</string>
    <string name="food_details">Food Details</string>
    <string name="food_quantity">Food quantity</string>
    <string name="amount_left">Amount left: </string>
    <string name="forgot_password">Forgot password?</string>
    <string name="change_password">Change password</string>
    <string name="link_to_login">Already registered? Login Now!</string>
    <string name="minimum_password">Password too short, enter minimum 8 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password</string>
    <string name="create_account">Create account</string>
    <string name="verification_message">We will send a verification code to
        this number via SMS.</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password_msg">Please enter your registered email address to receive your
        password reset instructions.</string>
    <string name="change_password_msg">Please enter your new password.</string>
    <string name="reset_successful">We have sent you instructions to reset your password!</string>
    <string name="reset_success">Successful password change</string>
    <string name="reset_fail">Failed to send reset password!</string>

    <!-- set up internet chooser dialog -->
    <string name="internet_access_request">This app needs internet access</string>
    <string name="internet_dialog_title">Select internet connection</string>
    <string name="wifi_option">Wi-Fi</string>
    <string name="mobile_network_option">Mobile Networks</string>
    <string name="internet_message">Please select an internet connection</string>
    <string name="close_button">Close</string>
    <string name="or">or</string>

    <!-- set up picture chooser dialog -->
    <string name="picture_message">Please select where to pick picture</string>
    <string name="picture_dialog_title">Edit Profile Photo</string>
    <string name="camera_option">Take Photo</string>
    <string name="gallery_option">Choose from Gallery</string>
    <string name="update_changes">Update Changes</string>

</resources>
