<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_badge"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_order_history"
            android:title="@string/nav_order_history" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_info_about_us"
            android:title="@string/nav_about_us" />

        <item
            android:id="@+id/nav_terms_conditions"
            android:icon="@drawable/ic_terms_conditions"
            android:title="@string/nav_terms_conditions" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_log_out" />
    </group>

</menu>
