<?xml version="1.0" encoding="utf-8"?>

<!-- This layout provides an interface
  for the user to pick preferred network connection -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/internet_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_internet_text_padding"
        android:text="@string/internet_message"
        android:textAlignment="center"
        android:textSize="@dimen/dialog_internet_title_text_size" />


    <LinearLayout
        android:id="@+id/internet_linear_layout"
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/internet_wifi_button"
            style="?android:buttonBarButtonStyle"
            android:layout_width="@dimen/dialog_internet_button_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dialog_internet_drawable_spacing"
            android:drawableTop="@drawable/ic_wifi_option"
            android:text="@string/wifi_option"
            android:textAllCaps="false"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/dialog_internet_text_size" />

        <Button
            android:id="@+id/internet_mobile_network_button"
            style="?android:buttonBarButtonStyle"
            android:layout_width="@dimen/dialog_internet_button_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dialog_internet_drawable_spacing"
            android:drawableTop="@drawable/ic_network_option"
            android:text="@string/mobile_network_option"
            android:textAllCaps="false"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/dialog_internet_text_size" />

    </LinearLayout>

    <Button
        android:id="@+id/internet_close_button"
        style="?android:buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/close_button"
        android:textSize="@dimen/dialog_internet_button_text_size"
        android:textStyle="bold" />

</LinearLayout>
