<?xml version="1.0" encoding="utf-8"?><!-- Renders recycler view for cart page -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="ke.co.venturisys.rubideliveryapp.fragments.CartFragment">

    <TextView
        android:id="@+id/cart_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/item_offset"
        android:gravity="center"
        android:padding="@dimen/general_padding"
        android:text="@string/cart_placeholder"
        android:textColor="@color/colorApp"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/cart_part_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cart_page_title"
        android:layout_margin="@dimen/item_offset"
        android:padding="@dimen/general_padding">

        <TextView
            android:id="@+id/cart_page_number_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/item_number"
            android:textColor="@color/colorApp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cart_page_price_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/total_price"
            android:textColor="@color/colorApp"
            android:textSize="18sp" />

    </LinearLayout>

    <include
        layout="@layout/general_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cart_part_linear_layout" />

    <Button
        android:id="@+id/btnProceedToCheckout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:background="@drawable/rounded_rectangle_edges"
        android:paddingBottom="@dimen/item_offset"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:paddingTop="@dimen/item_offset"
        android:text="@string/proceed_to_checkout"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</RelativeLayout>
