<?xml version="1.0" encoding="utf-8"?>

<!-- This layout provides an interface
  for the user to pick confirm number for SMS verifications -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_internet_text_padding"
        android:text="@string/verification_message"
        android:textAlignment="center"
        android:textColor="@color/blackDarker"
        android:textSize="@dimen/dialog_internet_title_text_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/verify_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/dialog_internet_text_padding"
            android:layout_toStartOf="@id/verify_space_holder"
            android:background="@color/colorAccent"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorWeb"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/verify_space_holder"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/verify_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/dialog_internet_text_padding"
            android:layout_toEndOf="@id/verify_space_holder"
            android:background="@color/colorAccent"
            android:text="@string/send"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorWeb"
            android:textSize="18sp" />

    </RelativeLayout>

</LinearLayout>
